css/mq.css
/* ----------- iPad 1, 2, Mini and Air ----------- */

/* Portrait and Landscape */
@media only screen 
  and (min-device-width: 768px) 
  and (max-device-width: 1024px) 
  and (-webkit-min-device-pixel-ratio: 1) {
    .right{
        width: 0;
    }

    div#track-info {
        margin-bottom: 0;
    }
}

/* ----------- iPad 3, 4 and Pro 9.7" ----------- */

/* Portrait and Landscape */
@media only screen 
  and (min-device-width: 768px) 
  and (max-device-width: 1024px) 
  and (-webkit-min-device-pixel-ratio: 2) {
    .right{
        width: 0;
    }
}

/* ----------- iPad Pro 10.5" ----------- */

/* Portrait and Landscape */
@media only screen 
  and (min-device-width: 834px) 
  and (max-device-width: 1112px)
  and (-webkit-min-device-pixel-ratio: 2) {
    .right{
        width: 0;
    }
}

/* ----------- iPad Pro 12.9" ----------- */

/* Portrait and Landscape */
@media only screen 
  and (min-device-width: 1024px) 
  and (max-device-width: 1366px)
  and (-webkit-min-device-pixel-ratio: 2) {
    .right{
        width: 0;
    }
}


/* ----------- iPhone 5, 5S, 5C and 5SE ----------- */

/* Portrait and Landscape */
@media only screen 
  and (min-device-width: 320px) 
  and (max-device-width: 568px)
  and (-webkit-min-device-pixel-ratio: 2) {
    .right{
        width: 0;
    }
}

/* Portrait */
@media only screen 
  and (min-device-width: 320px) 
  and (max-device-width: 568px)
  and (-webkit-min-device-pixel-ratio: 2)
  and (orientation: portrait) {

    #cover-device{
      display: flex!important;
      text-align: center;
      align-items: center;
      justify-content: center;
  }
  div#track-info{
    text-align: center;
  }
  div#title-box {
    font-size: 3.5em!important;
  }
}

/* Landscape */
@media only screen 
  and (min-device-width: 320px) 
  and (max-device-width: 568px)
  and (-webkit-min-device-pixel-ratio: 2)
  and (orientation: landscape) {

    #cover-device{
      display: none;
  }

  div#carton-cache {
    position: absolute;
    background: yellow;
    height: 100vh;
    width: 100vw;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  div#carton-cache > img {
    mix-blend-mode: multiply;
  }

  div#main-content{
    display: none;
  }

}

/* ----------- iPhone 6, 6S, 7 and 8 ----------- */

/* Portrait and Landscape */
@media only screen 
  and (min-device-width: 375px) 
  and (max-device-width: 667px) 
  and (-webkit-min-device-pixel-ratio: 2) { 
    .right{
        width: 0;
    }
}

/* Portrait */
@media only screen 
  and (min-device-width: 375px) 
  and (max-device-width: 667px) 
  and (-webkit-min-device-pixel-ratio: 2)
  and (orientation: portrait) { 
    #cover-device{
      display: flex!important;
      text-align: center;
      align-items: center;
      justify-content: center;
  }
  div#track-info{
    text-align: center;
  }
  div#title-box {
    font-size: 3.5em!important;
  }
}

/* Landscape */
@media only screen 
  and (min-device-width: 375px) 
  and (max-device-width: 667px) 
  and (-webkit-min-device-pixel-ratio: 2)
  and (orientation: landscape) { 
    #cover-device{
      display: none!important;
  }
  div#title-box {
    font-size: 4em;
  }

  div#carton-cache {
    position: absolute;
    background: yellow;
    height: 100vh;
    width: 100vw;
    display: flex;
    align-items: center;
    justify-content: center;
  }
  div#carton-cache > img {
    mix-blend-mode: multiply;
  }
  div#main-content{
    display: none;
  }
}



/* ----------- iPhone 6+, 7+ and 8+ ----------- */

/* Portrait and Landscape */
@media only screen 
  and (min-device-width: 414px) 
  and (max-device-width: 736px) 
  and (-webkit-min-device-pixel-ratio: 3) { 
    .right{
        width: 0;
    }
}

/* Portrait */
@media only screen 
  and (min-device-width: 414px) 
  and (max-device-width: 736px) 
  and (-webkit-min-device-pixel-ratio: 3)
  and (orientation: portrait) { 
    #cover-device{
      display: flex!important;
      text-align: center;
      align-items: center;
    justify-content: center;
  }
  div#track-info{
    text-align: center;
  }
  div#title-box {
    font-size: 4em;
  }
}

/* Landscape */
@media only screen 
  and (min-device-width: 414px) 
  and (max-device-width: 736px) 
  and (-webkit-min-device-pixel-ratio: 3)
  and (orientation: landscape) { 
    #cover-device{
      display: none!important;
  }
  div#title-box {
    font-size: 5em;
  }

  div#carton-cache {
    position: absolute;
    background: yellow;
    height: 100vh;
    width: 100vw;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  div#carton-cache > img {
    mix-blend-mode: multiply;
  }

  div#main-content{
    display: none;
  }
}

/* ----------- iPhone X ----------- */

/* Portrait and Landscape */
@media only screen 
  and (min-device-width: 375px) 
  and (max-device-width: 812px) 
  and (-webkit-min-device-pixel-ratio: 3) { 
    .right{
        width: 0;
    }
}

/* Portrait */
@media only screen 
  and (min-device-width: 375px) 
  and (max-device-width: 812px) 
  and (-webkit-min-device-pixel-ratio: 3)
  and (orientation: portrait) { 
    #cover-device{
      display: flex!important;
      text-align: center;
      align-items: center;
    justify-content: center;
  }
  div#track-info{
    text-align: center;
  }
  div#title-box {
    font-size: 5em;
  }
}

/* Landscape */
@media only screen 
  and (min-device-width: 375px) 
  and (max-device-width: 812px) 
  and (-webkit-min-device-pixel-ratio: 3)
  and (orientation: landscape) { 
    #cover-device{
      display: none!important;
  }

  div#carton-cache {
    position: absolute;
    background: yellow;
    height: 100vh;
    width: 100vw;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  div#carton-cache > img {
    mix-blend-mode: multiply;
  }
  div#main-content{
    display: none;
  }
}

